deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: formbuilder-product-page
spec:
  tls:
    - hosts:
      - formbuilder-product-page.apps.live-1.cloud-platform.service.justice.gov.uk
    - hosts:
      - moj-online.service.justice.gov.uk
      secretName: moj-online-product-page-prod-secret
    - hosts:
      - moj-forms.service.justice.gov.uk
      secretName: moj-forms-product-page-prod-secret
  rules:
  - host: formbuilder-product-page.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: formbuilder-product-page
          servicePort: 4567
  - host: moj-online.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: formbuilder-product-page
          servicePort: 4567
  - host: moj-forms.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: formbuilder-product-page
          servicePort: 4567
